[tool.poetry]
name = "innohassle-search"
version = "0.1.0"
description = "Search service for InNoHassle ecosystem"
authors = ["Nikita <n.sannikov@innopolis.university>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
authlib = "^1.6.0"
beanie = "^1.29.0"
colorlog = "^6.9.0"
cryptography = "^45.0.3"
fastapi = "^0.115.12"
httpx = "^0.28.1"
minio = "^7.2.15"
motor = "^3.7.1"
pre-commit = "^4.2.0"
pydantic = "^2.11.5"
python-multipart = "^0.0.20"
pyyaml = "^6.0.1"
qdrant-client = "^1.14.2"
ruff = "^0.11.13"
types-pyyaml = "^6.0.12.20250516"
uvicorn = "^0.34.3"

[tool.poetry.group.compute.dependencies]
langchain = "^0.3.25"
mmh3 = "^5.1.0"
nltk = "^3.8.1"
pymupdf4llm = { url = "https://github.com/dantetemplar/pymupdf4llm/releases/download/0.1.3/pymupdf4llm-0.1.3-py3-none-any.whl" }
pystemmer = "^3.0.0"
qdrant-client = "^1.14.2"
sentence-transformers = "^4.1.0"
xformers = "^0.0.30"

[tool.pydantic-mypy]
# setup pydantic plugin
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

# ignore authlib types
[[tool.mypy.overrides]]
module = "authlib.jose.*"
ignore_missing_imports = true
# ignore retriv types
[[tool.mypy.overrides]]
module = "retriv.*"
ignore_missing_imports = true
# ignore pymupdf types
[[tool.mypy.overrides]]
module = "pymupdf.*"
ignore_missing_imports = true
# ignore pymupdf4llm types
[[tool.mypy.overrides]]
module = "pymupdf4llm.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 120
lint.ignore = [
    # wildcard imports are fine
    "F403",
    "F405",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
