[tool.poetry]
name = "innohassle-search"
version = "0.1.0"
description = "Search service for InNoHassle ecosystem"
authors = ["Nikita <n.sannikov@innopolis.university>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
authlib = "^1.3.0"
beanie = "^1.30.0"
colorlog = "^6.8.2"
cryptography = "^45.0.4"
fastapi = "^0.115.13"
httpx = "^0.28.1"
minio = "^7.2.7"
motor = "^3.4.0"
pre-commit = "^4.2.0"
pydantic = "^2.11.7"
python-multipart = "^0.0.20"
pyyaml = "^6.0.1"
ruff = "^0.12.0"
types-pyyaml = "^6.0.12.20240311"
uvicorn = "^0.34.3"
markdownify = "^1.1.0"
beautifulsoup4 = "^4.13.4"
requests = "^2.32.4"

[tool.ruff]
line-length = 120
lint.ignore = [
    # wildcard imports are fine
    "F403",
    "F405",
    "PLR",
]
lint.extend-select = ["I", "UP", "PL"]
target-version = "py312"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
