[tool.poetry]
name = "innohassle-search"
version = "0.1.0"
description = "Search service for InNoHassle ecosystem"
authors = ["Nikita <n.sannikov@innopolis.university>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
apscheduler = "^3.11.0"
authlib = "^1.6.1"
beanie = "^2.0.0"
beautifulsoup4 = "^4.13.4"
colorlog = "^6.8.2"
cryptography = "^45.0.5"
deep-translator = "^1.11.4"
fake-useragent = "^2.2.0"
fastapi = "^0.116.1"
httpx = "^0.27.0"
langdetect = "^1.0.9"
markdownify = "^1.1.0"
minio = "^7.2.7"
motor = "^3.4.0"
pre-commit = "^4.2.0"
pydantic = "^2.7.4"
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
pytest-cov = "^6.2.1"
python-multipart = "^0.0.20"
pyyaml = "^6.0.1"
requests = "^2.32.4"
ruff = "^0.12.4"
sentencepiece = ">=0.1.99"
types-pyyaml = "^6.0.12.20240311"
uvicorn = "^0.35"

[tool.poetry.group.ml.dependencies]
chonkie = {extras = ["all"], version = "^1.1.1"}
einops = "^0.8.1"
infinity-client = "^0.0.76"
lance = "^1.2.1"
lancedb = "^0.24.1"
openai = "^1.97.0"
pandas = "^2.3.1"
pylance = {version = "^0.31.2b3", allow-prereleases = true, source = "lancedb"}

[[tool.poetry.source]]
name = "lancedb"
url = "https://pypi.fury.io/lancedb/"
priority = "supplemental"

[tool.ruff]
line-length = 120
lint.ignore = [
    # wildcard imports are fine
    "F403",
    "F405",
    "PLR",
    "UP046"
]
lint.extend-select = ["I", "UP", "PL"]
lint.extend-ignore = ["PLC0415"]
target-version = "py312"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
